# matrix-interop-demo

./: .gitignore  DEEP_DIVE.md  Justfile  PERFORMANCE_LOG.md  README.md  build.zig  run_benchmark_stages.sh
.github/workflows/: bench-master.yml
bench/: bench.zig
cpp/: matrix.cpp  matrix.h
rust/: Cargo.toml
rust/src/: lib.rs  matrix.rs
zig/: matrix.zig  matrix_stage1.zig  matrix_stage3.zig  matrix_stage4.zig
